# recover_state_server

./: .env  .env.e.g  .env.eg  .gitignore  .gitmodules  Cargo.toml  README.md  exodus.sh  run_recover.sh
config/: Cargo.toml
config/src/: api.rs  database.rs  evn_tools.rs  lib.rs  runtime.rs
config/src/layer1/: chain_config.rs  chain_type.rs  client_config.rs  contract_config.rs  mod.rs
docs/: api.md  env.md  exodus_server_api.md  psql.md
exodus-interface/: .env  .env.devnet  .prettierrc  README.md  ecosystem.config.js  package-lock.json  package.json  tsconfig.json
exodus-interface/public/: index.html  manifest.json
exodus-interface/server/: blocks.js  contracts.js  index.js  index.ts  queue.js
exodus-interface/src/: App.tsx  index.css  index.tsx
exodus-interface/src/__mock__/: index.ts
exodus-interface/src/abi/: Verifier.json
exodus-interface/src/api/: index.ts
exodus-interface/src/components/: Icon.tsx
exodus-interface/src/config/: chains.ts  index.ts
exodus-interface/src/connectors/: index.ts  metamask.ts
exodus-interface/src/pages/: Header.tsx  History.tsx  Home.tsx  L2Balance.tsx  L2Balances.tsx  PendingBalance.tsx  SyncBlock.tsx  VerifyStoredBlockHash.tsx
exodus-interface/src/store/: Updater.tsx  index.ts
exodus-interface/src/store/home/: actions.ts  hooks.ts  reducer.ts  types.ts  updater.tsx
exodus-interface/src/theme/: index.tsx
exodus-interface/src/types/: global.d.ts
offchain_recover_state/: Cargo.toml
offchain_recover_state/src/: aggregated_commit_op.rs  data_restore_driver.rs  database_storage_interactor.rs  driver.rs  events.rs  events_state.rs  inmemory_storage_interactor.rs  lib.rs  log.rs  main.rs  rollup_ops.rs  storage_interactor.rs  tree_state.rs
offchain_recover_state/src/contract/: ZkLink.json  mod.rs  utils.rs  v0.rs  version.rs  zklink_evm_contract.rs
offchain_recover_state/src/contract/update_token_events/: ERC20.json  evm.rs  mod.rs
offchain_recover_state/src/events/: events_state.rs  mod.rs
offchain_recover_state/src/storage_interactor/: database.rs  inmemory.rs  mod.rs
offchain_recover_state/src/tests/: mod.rs  utils.rs
prover/: Cargo.toml  README.md
prover/src/: exit_proof.rs  exit_type.rs  exodus_prover.rs  fs_utils.rs  lib.rs  main.rs  proving_cache.rs  retries.rs  utils.rs
src/: acquired_tokens.rs  app_data.rs  lib.rs  main.rs  middleware.rs  proofs_cache.rs  recover_progress.rs  recovered_state.rs  request.rs  response.rs  server.rs  server_data.rs  test.rs  utils.rs
src/app_data/: mod.rs  recover_progress.rs  recovered_state.rs
src/response/: mod.rs  types.rs
storage/: Cargo.toml
storage/migrations/2020-04-07-065600_init_storage/: up.sql
storage/src/: diff.rs  lib.rs
storage/src/chain/: mod.rs  proof.rs  stats.rs
storage/src/chain/account/: mod.rs  records.rs  restore_account.rs
storage/src/chain/block/: conversion.rs  mod.rs  records.rs
storage/src/chain/operations/: mod.rs  records.rs
storage/src/chain/state/: mod.rs
storage/src/connection/: mod.rs
storage/src/prover/: mod.rs  records.rs
storage/src/recover_state/: mod.rs  records.rs
storage/src/tokens/: mod.rs  records.rs  utils.rs
zklink_circuit/basic_types/: Cargo.toml
zklink_circuit/basic_types/src/: lib.rs  macros.rs
zklink_circuit/circuit/: Cargo.toml
zklink_circuit/circuit/src/: account.rs  allocated_structures.rs  branch.rs  circuit.rs  element.rs  exit_circuit.rs  lib.rs  operation.rs  utils.rs
zklink_circuit/circuit/src/witness/: account.rs  branch.rs  mod.rs  utils.rs
zklink_circuit/common_types/: Cargo.toml  README.md
zklink_circuit/common_types/src/: block.rs  gas_counter.rs  helpers.rs  layer_one.rs  lib.rs  prover.rs  tokens.rs  utils.rs
zklink_circuit/common_types/src/account/: account_update.rs  mod.rs  pubkey_hash.rs
zklink_circuit/common_types/src/operations/: basic_impl_and_params.rs  change_pubkey_op.rs  deposit_op.rs  forced_exit.rs  full_exit_op.rs  mod.rs  noop_op.rs  order_matching_op.rs  transfer_op.rs  transfer_to_new_op.rs  withdraw_op.rs
zklink_circuit/common_types/src/priority_ops/: mod.rs  tests.rs
zklink_circuit/common_types/src/tests/: block.rs  hardcoded.rs  mod.rs
zklink_circuit/common_types/src/tx/: change_pubkey.rs  deposit.rs  forced_exit.rs  fullexit.rs  mod.rs  order_matching.rs  tests.rs  transfer.rs  validators.rs  withdraw.rs  zklink_tx.rs
zklink_circuit/common_types/src/tx/primitives/: eip1271_signature.rs  layer1_signature.rs  mod.rs  packed_eth_signature.rs  packed_public_key.rs  packed_signature.rs  signature.rs  stark_ecdsa_signature.rs  tx_hash.rs
zklink_circuit/crypto/: Cargo.toml  README.md
zklink_circuit/crypto/benches/criterion/merkle_tree/: parallel_smt.rs  rescue_hasher.rs
zklink_circuit/crypto/benches/criterion/primitives/: mod.rs
zklink_circuit/crypto/benches/criterion/signatures/: mod.rs
zklink_circuit/crypto/src/: convert.rs  lib.rs  params.rs  primitives.rs  proof.rs  serialization.rs
zklink_circuit/crypto/src/circuit/: account.rs  mod.rs  utils.rs
zklink_circuit/crypto/src/merkle_tree/: mod.rs  parallel_smt.rs  rescue_hasher.rs
zklink_circuit/utils/: Cargo.toml
zklink_circuit/utils/src/: lib.rs  serde_wrappers.rs
zklink_keys/: verification_exit.key
zklink_state/: Cargo.toml
zklink_state/src/: state.rs
zklink_state/src/handler/: change_pubkey.rs  deposit.rs  forced_exit.rs  full_exit.rs  mod.rs  order_matching.rs  transfer.rs  withdraw.rs
