[package]
name = "recover_state_server"
version = "0.1.0"
edition = "2021"
authors = ["N Labs Team<nevermore@zklink.org>"]
homepage = "https://zk.link/"
repository = "https://github.com/zkLinkProtocol/zklink-periphery"
license = "Apache-2.0"
keywords = ["blockchain", "zklink"]
categories = ["cryptography"]
publish = false # We don't want to publish our binaries.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = {version = "4"}
anyhow = "1.0"
structopt = "0.3.20"
serde = "1.0.137"
bigdecimal = { version = "0.3.0"}
tokio = { version = "1.0", features = ["full"] }

zklink_storage = { path = "storage" }
zklink_types = { path = "zklink-circuit/common_types", version = "1.0" }
zklink_crypto = { path = "zklink-circuit/crypto", version = "1.0" }
zklink_utils = { path = "zklink-circuit/utils", version = "1.0" }
recover_state_config = { path = "config", version = "0.1.0" }
zklink_prover = { path = "prover", version = "1.0.0" }
offchain_recover_state = { path = "offchain_recover_state", version = "0.1.0" }
tracing = {version= "0.1", features = ["log"]}
tracing-subscriber = "0.3"

[[bin]]
name = "zklink_recover_state"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[workspace]
members = [
    "offchain_recover_state",
    "zklink_state",
    "storage",
    "prover",
    "config"
]

exclude = ["zklink-circuit"]