[package]
name = "recover_state_server"
version = "0.1.0"
edition = "2021"
authors = ["N Labs Team<nevermore@zklink.org>"]
homepage = "https://zk.link/"
repository = "https://github.com/zkLinkProtocol/zklink-periphery"
license = "Apache-2.0"
keywords = ["blockchain", "zklink"]
categories = ["cryptography"]
publish = false # We don't want to publish our binaries.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = {version = "4"}
actix-cors = "0.6.0"
moka = { version = "0.10", features = ["future"] }
dotenvy = "0.15.1"
anyhow = "1.0"
structopt = "0.3.20"
serde = "1.0.137"
serde_json = "1.0"
bigdecimal = { version = "0.3.0"}
tokio = { version = "1.0", features = ["full"] }

zklink_storage = { path = "storage" }
zklink_types = { path = "zklink_circuit/common_types", version = "1.0" }
zklink_crypto = { path = "zklink_circuit/crypto", version = "1.0" }
zklink_utils = { path = "zklink_circuit/utils", version = "1.0" }
recover_state_config = { path = "config", version = "0.1.0" }
zklink_prover = { path = "prover", version = "1.0.0" }
offchain_recover_state = { path = "offchain_recover_state", version = "0.1.0" }

tracing = {version= "0.1", features = ["log"]}
tracing-subscriber = "0.3"

[[bin]]
name = "exodus_server"
path = "src/main.rs"

[[bin]]
name = "exodus_prover"
path = "prover/src/main.rs"

[[bin]]
name = "recover_state"
path = "offchain_recover_state/src/main.rs"

[workspace]
members = [
    "offchain_recover_state",
    "zklink_state",
    "storage",
    "prover",
    "config",
    "zklink_circuit/basic_types",
    "zklink_circuit/circuit",
    "zklink_circuit/common_types",
    "zklink_circuit/crypto",
    "zklink_circuit/utils",
]