[package]
name = "zklink_prover"
version = "1.0.0"
edition = "2021"
authors = ["N Labs Team<nevermore@zklink.org>"]
homepage = "https://zk.link/"
repository = "https://github.com/zkLinkProtocol/zklink-periphery"
license = "Apache-2.0"
keywords = ["blockchain", "zklink"]
categories = ["cryptography"]
publish = false # We don't want to publish our binaries.

[dependencies]
zklink_circuit = { path = "../zklink-circuit/circuit", version = "1.0" }
zklink_crypto = { path = "../zklink-circuit/crypto", version = "1.0" }
zklink_basic_types = { path = "../zklink-circuit/basic_types", version = "1.0" }
zklink_types = { path = "../zklink-circuit/common_types", version = "1.0" }
recover_state_config = { path = "../config", version = "0.1.0"}

anyhow = "1.0"
backoff = "0.4.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
num = { version = "0.4.0", features = ["serde"] }
tracing = {version= "0.1", features = ["log"]}
tracing-subscriber = "0.3"

[dev-dependencies]
zklink_storage = { path = "../storage", version = "1.0" }
zklink_utils = { path = "../zklink-circuit/utils", version = "1.0" }
dotenvy = "0.15.1"
serde_json = "1.0.0"
structopt = "0.3.20"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "zklink_exit_prover"
path = "src/main.rs"

