[package]
name = "zklink_circuit"
version = "1.0.0"
edition = "2018"
authors = ["N Labs Team<nevermore@zklink.org>"]
homepage = "https://zk.link/"
license = "Apache-2.0"
keywords = ["blockchain", "zklink"]
categories = ["cryptography"]

[features]
default = []
playground = []

[dependencies]
zklink_types = { path = "../common_types", version = "1.0" }
zklink_crypto = { path = "../crypto", version = "1.0" }
tracing = {version= "0.1.22", features = ["log"]}

num = { version = "0.4.0", features = ["serde"] }
serde = "1.0.137"
anyhow = "1.0"
once_cell = "1.7.2"
roots = "0.0.7"
serde_json = "1.0"
itertools = "0.9.0"
sha2 = "0.9"
lazy_static = "1.4.0"
parity-crypto = {version = "0.9.0", features = ["publickey"] }
rust-crypto = "0.2"