[package]
name = "zklink_types"
version = "1.0.0"
edition = "2018"
authors = ["N Labs Team<nevermore@zklink.org>"]
homepage = "https://zk.link/"
license = "Apache-2.0"
keywords = ["blockchain", "zklink"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

ethers = "2.0.0"
hex = "0.4"
itertools = "0.9"
num = { version = "0.4.0", features = ["serde"] }

# Crypto stuff
parity-crypto = { version = "0.9.0", features = ["publickey"] }

serde = "1.0.137"
serde_json = "1.0.0"
tiny-keccak = "1.4.2"
tracing = { version = "0.1.22", features = ["log"] }

validator = { version = "0.15", features = ["derive"] }
zklink_basic_types = { path = "../basic_types", version = "1.0" }
zklink_crypto = { path = "../crypto", version = "1.0" }
zklink_utils = { path = "../utils", version = "1.0" }

[dev-dependencies]
criterion = "0.3.0"
lazy_static = "1.4.0"
secp256k1 = { version = "0.23.0", features = ["std", "recovery"] }

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion/lib.rs"

[features]
default = []
run_benches = []
