[package]
name = "zklink_crypto"
version = "1.0.0"
edition = "2018"
authors = ["N Labs Team<nevermore@zklink.org>"]
homepage = "https://zk.link/"
license = "Apache-2.0"
keywords = ["blockchain", "zklink"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
franklin_crypto = { package = "franklin-crypto", version = "0.0.5", git = "https://github.com/zk-liangliang/franklin-crypto.git", branch="beta", features = ["multicore", "plonk"]}
recursive_aggregation_circuit = { package = "recursive_aggregation_circuit", version = "1.0.0", git = "https://github.com/zk-liangliang/link_aggregation_circuit.git", branch="master"}

rand = "0.4"
num = { version = "0.4.0", features = ["serde"] }
zklink_basic_types = { path = "../basic_types", version = "1.0" }

serde = "1.0"
anyhow = "1.0"
lazy_static = "1.2.0"
fnv = "1.0.3"
rayon = "1.0.3"
hex = "0.4"
base64 = "0.13"

[dev-dependencies]
serde_json = "1.0"

