[package]
name = "zklink_utils"
version = "1.0.0"
edition = "2018"
authors = ["N Labs Team<nevermore@zklink.org>"]
homepage = "https://zk.link/"
license = "Apache-2.0"
keywords = ["blockchain", "zklink"]
categories = ["cryptography"]

[dependencies]
bigdecimal = { version = "0.3.0", features = ["serde"] }
hex = "0.4"
num = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.0"
